Version ?.?.?? (released ??-??-????):

	* Ship visualization UI completed.
	* Character conversion from CP437 (DOS) to UTF-8 for object names.
	* RPM .spec file added  - RPM package generation working
	* Debian control files added - DEB package generation working
	* Bug fixed: program crashed when clicking "play" button on empty
	  game manager.
	* Bug fixed: KOREx.DAT now checks for uppercase & lowercase file names.

Version 0.2.12 (released 04-10-2004):

	* Starchart placed on the middle when defining a new game.
	* All specs data files are loaded.
	* Developers documentation generated using doxygen.
	* Basic minefield visualization.
	* Basic ion storm visualization.
	* GDS panel info completed.
	* Lots of code cleanups & bugfixes.
	* Several UI optimizations.

Version 0.2.11 (released 03-15-2004):

	* Bugs on some ship cargo unload and transfer methods were fixed.
	* Bugs on ship data loading and ship on starchart manipulation
	  were fixed.
	* Bug on the unpack detection was fixed, the path was assembled
	  incorrectly so the playerN.rst was not found.
	* Unpack feature enhanced to store additional targets on TARGETx.EXT
	  file.
	* German translation, thanks to Stefan Reuther!!!

Version 0.2.10 (released 02-02-2004):

	* Several code optimizations on GUI updates.
	* Planet and ship marks restyled.
	* Planets are shown as circles, ships as triangles oriented
  	  depending on their heading.
	* First implementation on ship data: right-click on them to check
	  for their info.
	* Implementation of GwpLocation, a new object to group other
	  objects on the starchart that are on the same place.
	* Several bug fixes on the new data objects.

Version 0.2.9 (released 01-25-2004):

	* Internal data redesign: planets, starbases and ships now are
	  GObjects, part of a object hierarchy that will represent the
	  entire data scheme on GWP. This will make very easy the binding to
	  another languajes to treat this data.